--- a/SFML 2.3.21/SFML 2.3.21.vcxproj.filters
+++ b/SFML 2.3.21/SFML 2.3.21.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="Menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -210,6 +213,9 @@
       <Filter>Application</Filter>
     </ClInclude>
     <ClInclude Include="Menu.h">
+      <Filter>Application</Filter>
+    </ClInclude>
+    <ClInclude Include="MainMenu.h">
       <Filter>Application</Filter>
     </ClInclude>
   </ItemGroup>
