--- a/SFML 2.3.21/SFML 2.3.21.vcxproj.filters
+++ b/SFML 2.3.21/SFML 2.3.21.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="PauseMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HUD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -252,6 +255,9 @@
       <Filter>General</Filter>
     </ClInclude>
     <ClInclude Include="PauseMenu.h">
+      <Filter>Application</Filter>
+    </ClInclude>
+    <ClInclude Include="HUD.h">
       <Filter>Application</Filter>
     </ClInclude>
   </ItemGroup>
