--- a/SFML 2.3.21/SFML 2.3.21.vcxproj.filters
+++ b/SFML 2.3.21/SFML 2.3.21.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="HUD.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TwoPlayerMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -258,6 +261,9 @@
       <Filter>Application</Filter>
     </ClInclude>
     <ClInclude Include="HUD.h">
+      <Filter>Application</Filter>
+    </ClInclude>
+    <ClInclude Include="TwoPlayerMenu.h">
       <Filter>Application</Filter>
     </ClInclude>
   </ItemGroup>
